manifests/infra/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: securityheaders
  namespace: traefik
spec:
  headers:
    # HSTS Headers
    forceSTSHeader: false
    stsPreload: false
    stsSeconds: 15552000
    # X-Frame-Options: SAMEORIGIN
    customFrameOptionsValue: SAMEORIGIN
    # Referrer-Policy: same-origin
    referrerPolicy: 'same-origin'
    sslRedirect: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-bambustudio
  namespace: traefik
spec:
  plugin:
    sablier:
      group: bambustudio
      dynamic:
        displayName: Bambu Studio
        refreshFrequency: 5s
        showDetails: "true"
        theme: ghost
      sablierUrl: http://sablier-sablier.sablier.svc.cluster.local:10000
      sessionDuration: 1h
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-pingvinshare
  namespace: traefik
spec:
  plugin:
    sablier:
      group: pingvinshare
      dynamic:
        displayName: Pingvin Share
        refreshFrequency: 5s
        showDetails: "true"
        theme: ghost
      sablierUrl: http://sablier-sablier.sablier.svc.cluster.local:10000
      sessionDuration: 1h
