manifests/infra/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-clusterip
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
