manifests/infra/traefik/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.homelab.olav.ninja"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-wildcard-tls-certificate
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "homelab.olav.ninja"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-wildcard-tls-certificate
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - gitea # Only gitea uses SSH for now
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: netbird-proxy
      protocol: TLS
      port: 9443
      hostname: "*.proxy.netbird.homelab.olav.ninja"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - netbird
    - name: netbird-proxy-apex
      protocol: TLS
      port: 9443
      hostname: "proxy.netbird.homelab.olav.ninja"
      tls:
        mode: Passthrough
        certificateRefs:
          - name: gateway-wildcard-tls-certificate
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - netbird
    - name: https
      protocol: HTTPS
      port: 9443
      hostname: "*.homelab.olav.ninja"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-wildcard-tls-certificate
      allowedRoutes:
        namespaces:
          from: All
