manifests/infra/traefik/tcp-routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: traefik-clusterip
spec:
  parentRefs:
  - name: netbird-private
    namespace: netbird
  rules:
  - backendRefs:
    - name: traefik-clusterip
      port: 443
